--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,19 @@ p {
     font-weight: bolder;
 }
 
+.ital {
+    font-style: italic;
+    font-size: 18px;
+}
+
 img {
     width: 160px;
     height: 160px;
+}
+
+.footer {
+    font-size: 18px;
+    color:#a11111;
+    text-align: center;
+    font-weight: lighter;
 }
