--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
 
 h1 {
     font-family: "Architects Daughter", cursive;
-    font-size: 70px;
+    font-size: 60px;
     font-weight: bold;
     padding: 5px;
 }
@@ -20,16 +20,28 @@ p {
     font-weight: bolder;
 }
 
+
 .ital {
     font-style: italic;
     font-size: 18px;
+    font-weight: lighter;
+}
+
+.target-number {
+    font-size: 40px;
+    color: yellow;
+    padding-top: 15px;
 }
 
 img {
-    width: 160px;
-    height: 160px;
+    width: 180px;
+    height: 180px;
+    padding:10px;
 }
-
+.target-image {
+    width: 100px;
+    height: 100px;
+}
 .footer {
     font-size: 18px;
     color:#a11111;
